--- a/Research.html
+++ b/Research.html
@@ -13,23 +13,63 @@
         <nav>
             <a href="index.html">About</a>
             <a href="research.html">Research</a>
+            <a href="workex.html">Work Experience</a>
             <a href="contact.html">Contact</a>
-            <a href="https://onlinestatbook.com/Online_Statistics_Education.pdf" target="_blank">CV</a>
+            <a href="assets/Arindam_CV.pdf" target="_blank">CV</a>
         </nav>
       </header>
 
       <section id="projects">
         <h2>Research</h2>
-        <div class="project-list">
-          <div class="project">
-            <h3>Research One</h3>
-            <p>Short description, tech used, link.</p>
-          </div>
-          <div class="project">
-            <h3>Research Two</h3>
-            <p>Short description, etc.</p>
-          </div>
+      
+Hi—thanks for stopping by. I study how to make decisions that hold up when data or environments shift. My work focuses on uncertainty quantification and decision-making under uncertainty, aiming for methods that are principled yet practical.
+Ongoing work
+Nonparametric confidence intervals via the Cheap Bootstrap (with Prof. Henry Lam): Asymptotically exact CIs for bagged predictors using a small, fixed number of resamples with growing bag size; applicable to Random Forests and bagged SAA in stochastic optimization.
+ Arindam_CV
+
+
+Superiority of naïve optimization via stochastic dominance (with Prof. Henry Lam): When ERM can outperform DRO/regularization in worst-case regret under joint data and distributional uncertainty.
+ Arindam_CV
+
+
+Rare-event probabilities using Extreme Value Theory (with Prof. Henry Lam): Estimating tail probabilities using GPD as a model-agnostic alternative to importance sampling.
+ Arindam_CV
+
+
+Fantasy-sports user behavior (with Dream Sports): Causal impact of platform actions (promotions/incentives) on engagement at production scale.
+ Arindam_CV
+
+
+Multivariate flight-data modeling (NASA Langley): Tractable optimization with polynomial features; internal Python package and MATLAB implementation; estimation with non-normalized statistical models.
+ Arindam_CV
+
+
+Patents & publications
+Efficient Uncertainty Quantification of Bagging via the Cheap Bootstrap. Proceedings of the Winter Simulation Conference (WSC) 2025. (with H. Lam).
+ Arindam_CV
+
+
+Methods and systems for developing decision-tree machine-learning models. US 2024/0386287 A1. (Saha, Dasgupta, Tewari, Ramesh, Roy Chowdhury, et al.).
+ Arindam_CV
+
+
+Technical reports & working notes
+Drafts available on request covering the topics above: Cheap Bootstrap for bagging, ERM vs. DRO under joint uncertainty, EVT-based rare-event estimation, and large-scale behavioral analytics.
+Arindam_CV
+Invited talks
+NASA Langley Research Centre (Nov 2024), Uncertainty Quantification Seminar:
+ “Modeling Multivariate Data using Exponential Polynomials”; “Stochastic Optimization: Superiority of Naïve Approaches.”
+ Arindam_CV
+
+
+INFORMS Annual Meeting (Oct 2024), Recent Advances in Data-Driven Optimization:
+ “Robustness vs Statistical Efficiency: Superiority of Naïve Optimization.”
+ Arindam_CV
+
+
+New England Statistics Symposium (May 2024), Recent Advances in Data-Driven Decision-Making:
+ “Regret Optimality of Empirical Risk Minimization.”
           <!-- add more -->
-        </div>
+     
       </section>
 </body>
