--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,9 @@
         <nav>
             <a href="index.html">About</a>
             <a href="research.html">Research</a>
+            <a href="workex.html">Work Experience</a>
             <a href="contact.html">Contact</a>
-            <a href="https://onlinestatbook.com/Online_Statistics_Education.pdf" target="_blank">CV</a>
+            <a href="assets/Arindam_CV.pdf" target="_blank">CV</a>
         </nav>
       </header>
 
